--- a/src/common/ui/forms/select/select.component.scss
+++ b/src/common/ui/forms/select/select.component.scss
@@ -5,6 +5,7 @@
 
 // Component variables
 @import '../field/field.component.variables.scss';
+@import '../field/field.component.scss';
 
 // Component variables
 @import 'select.component.variables.scss';
