--- a/src/common/ui/button/button.component.scss
+++ b/src/common/ui/button/button.component.scss
@@ -451,7 +451,7 @@
 			left: 10px;
 
 			& + .btn__text {
-				margin-left: ( $spacer * .5 );
+				margin-left: $spacer;
 			}
 		}
 
@@ -459,7 +459,7 @@
 			right: 10px;
 
 			& + .btn__text {
-				margin-right: ( $spacer * .5 );
+				margin-right: $spacer;
 			}
 		}
 
