--- a/src/common/ui/forms/field/_field.component.variables.scss
+++ b/src/common/ui/forms/field/_field.component.variables.scss
@@ -34,7 +34,7 @@ $input-padding-y-public:             $spacer;
 $input-padding-x-public:             ( $spacer * 1.5  );
 
 $custom-control-gutter:                                  0;
-$custom-control-indicator-top:                           .125;
+$custom-control-indicator-top:                           .125rem;
 $custom-control-indicator-size:                          1rem;
 $custom-control-indicator-bg:                            $white;
 $custom-control-indicator-box-shadow:                    none;
@@ -63,6 +63,7 @@ $custom-control-label-disabled-color:                    rgba($input-color, .4);
 $custom-control-spacer-x:                     ( $spacer * 2  );
 
 $custom-radio-filling-size:                   .5rem;
+$custom-radio-filling-center:                 ( $custom-control-indicator-size - $custom-radio-filling-size ) * .5;
 $custom-radio-indicator-border-radius:        50%;
 $custom-radio-indicator-icon-checked:         none;
 $custom-radio-control-indicator-checked-bg:   $font-text;
