--- a/src/common/ui/modal/modal.component.scss
+++ b/src/common/ui/modal/modal.component.scss
@@ -72,7 +72,7 @@
 		// Media queries
 		@include media-breakpoint-up(sm) {
 			margin-bottom: 0;
-			margin-right: ( $spacer / 3 );
+			margin-right: math.div($spacer, 3);
 		}
 	}
 
@@ -83,7 +83,7 @@
 		// Media queries
 		@include media-breakpoint-up(sm) {
 			margin-top: 0;
-			margin-left: ( $spacer / 3 );
+			margin-left: math.div($spacer, 3);
 		}
 	}
 }
