--- a/src/common/ui/supply-point/supply-point.component.scss
+++ b/src/common/ui/supply-point/supply-point.component.scss
@@ -40,6 +40,7 @@
 			min-height: 255px;
 			height: calc(100% - #{$spacer} );
 			padding: ( $spacer * 1.5 );
+			margin-bottom: $spacer;
 			border-radius: $border-radius;
 			box-shadow: $box-shadow;
 
