--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -452,7 +452,9 @@
                     </div>
                     <ng-container *ngIf="contractActionsTemplate">
                         <ng-container
-                            *ngTemplateOutlet="contractActionsTemplate"
+                            *ngTemplateOutlet="contractActionsTemplate;
+                                               context: { supplyPoint: supplyPoint }
+                                              "
                         ></ng-container>
                     </ng-container>
                 </div>
