--- a/src/app/pages/consumers/supply-points-overview/detail/detail.component.html
+++ b/src/app/pages/consumers/supply-points-overview/detail/detail.component.html
@@ -1,3 +1,3 @@
 <pxe-layout-container pageTitle="Odběrné místo">
-    <pxe-history-detail-container></pxe-history-detail-container>
+    <pxe-detail-container></pxe-detail-container>
 </pxe-layout-container>
