--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -458,7 +458,7 @@
                         </h2>
                         <a
                             [class.link--disabled]="formLoading"
-                            (click)="downloadPdf()"
+                            (click)="downloadPfdAction.emit(supplyPoint.contract?.contractId)"
                         >
                             Stáhnout</a
                         >
