feature/PXEPR-2.9.0-fixes

--- a/src/app/pages/consumers/supply-points/detail/supply-point-detail.component.html
+++ b/src/app/pages/consumers/supply-points/detail/supply-point-detail.component.html
@@ -8,7 +8,7 @@
 <ng-template #terminateContactInfoTemplate let-contract="contract">
     <div class="col-12 mb-4 small">
         Kliknutím na tlačítko „Vypovědět“ vypovíte smlouvu o sdružených službách dodávky pro výše uvedené odběrné místo
-        podle §11a odst. 3 zák. č. 458/2000 Sb. Text výpovědi naleznete
+        podle §11b odst. 1 zák. č. 458/2000 Sb. Text výpovědi naleznete
         <a [class.link--disabled]="documentLoading" (click)="saveDocument(contract.contractId, documentType.DENUNCIATION)">zde</a>.
     </div>
 </ng-template>
