--- a/src/common/ui/supply-point/supply-point.component.html
+++ b/src/common/ui/supply-point/supply-point.component.html
@@ -93,11 +93,22 @@
                                     <span class="supply-point__value-name"
                                         >Dodávkové období</span
                                     >
-                                    <span class="supply-point__value">
+                                    <span
+                                        *ngIf="data?.contractEndType.code !== contractEndType.CONTRACT_END_INDEFINITE_PERIOD"
+                                        class="supply-point__value"
+                                    >
                                         {{data.contract.deliveryFrom |
                                         date:'d.&nbsp;M.&nbsp;y'}} -
                                         {{data.contract.deliveryTo |
                                         date:'d.&nbsp;M.&nbsp;y'}}
+                                    </span>
+                                    <span
+                                        *ngIf="data?.contractEndType.code === contractEndType.CONTRACT_END_INDEFINITE_PERIOD"
+                                        class="supply-point__value"
+                                    >
+                                        {{data.contract.deliveryFrom |
+                                        date:'d.&nbsp;M.&nbsp;y'}} -
+                                        {{contractEndTypeTranslateMap[data?.contractEndType.code]}}
                                     </span>
                                 </div>
                             </div>
