--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -41,9 +41,18 @@
         <div class="col-12 col-xl-10 offset-xl-1">
             <lnd-banner-ui
                 buttonLabel="Dokončit"
+                *ngIf="supplyPoint?.contractEndType.code !== contractEndType.CONTRACT_END_INDEFINITE_PERIOD"
                 [data]="{
                     text: 'Platnost vaší stávající smlouvy končí za ' + contractEndInDays + ' ' + (contractEndInDays | plural: 'day') + ', ale ' +
                      'máte jednu navazující smlouvu rozpracovanou, chcete jí dokončit?'
+                }"
+                (customBannerAction)="finallyNextContractAction.emit()"
+            ></lnd-banner-ui>
+            <lnd-banner-ui
+                *ngIf="supplyPoint?.contractEndType.code === contractEndType.CONTRACT_END_INDEFINITE_PERIOD"
+                buttonLabel="Dokončit"
+                [data]="{
+                    text: 'Máte jednu navazující smlouvu rozpracovanou, chcete jí dokončit?'
                 }"
                 (customBannerAction)="finallyNextContractAction.emit()"
             ></lnd-banner-ui>
