--- a/src/app/pages/public/logout/logout-page.component.html
+++ b/src/app/pages/public/logout/logout-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="container-content container-content--public">
-        <pxe-layout-container pageTitle="LOG-OUT">
+        <pxe-layout-container pageTitle="Odhlášení">
             <lnd-alert
                 [type]="'danger'"
                 [isDismissible]="false"
